Update permissions for configMaps
Note we have to create a separate rule for create, because it cannot
be restricted to a specific name like get and update can.

--- a/prog/weave-kube/weave-daemonset-k8s-1.6.yaml
+++ b/prog/weave-kube/weave-daemonset-k8s-1.6.yaml
@@ -55,12 +55,20 @@ items:
         name: weave-net2
     rules:
       - apiGroups:
-          - extensions
+          - ''
         resources:
-          - daemonsets
+          - configmaps
+        resourceNames:
+          - weave-net
         verbs:
           - get
           - update
+      - apiGroups:
+          - ''
+        resources:
+          - configmaps
+        verbs:
+          - create
   - apiVersion: rbac.authorization.k8s.io/v1beta1
     kind: RoleBinding
     metadata:
